# data_quality_pydantic

./: .pre-commit-config.yaml  README.md  pyproject.toml
.astro/: config.yaml  test_dag_integrity_default.py
.hooks/: check_dag_id_existence.py
dags/dim_institucional/: exampledag.py
dags/ingestao_pda/: exemplo_decorator.py
tests/: test_dags_import.py
